Library/AXL(Library)/Visual Basic(Net)/AXDev.vb


' Execute firmware update of M-III Master Board.
Public Declare Function AxlM3SetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwFlashBurnStepNo As Integer) As Integer
' Verifying result of execute firmware update of M-III Master Board.
Public Declare Function AxlM3GetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwFlashBurnStepNo As Integer, ByRef dwIsFlashBurnDone As Integer) As Integer

' The API for setting EEPROM data of M-III Master board.
Public Declare Function AxlM3SetCFGData Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef pCmdData As Integer, ByVal CmdDataSize As Integer) As Integer
' The API for getting data from EEPROM of M-III Master board.
Public Declare Function AxlM3GetCFGData Lib "AXL.dll" (ByVal lBoradNo As Integer, ByRef pCmdData As Integer, ByVal CmdDataSize As Integer) As Integer

' The API for setting CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3SetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wCh0Slaves As Integer, ByVal wCh1Slaves As Integer, ByVal dwCh0CycTime As Integer, ByVal dwCh1CycTime As Integer, ByVal dwChInfoMaxRetry As Integer) As Integer
' The API for verifying CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3GetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef wCh0Slaves As Integer, ByVal wCh1Slaves As Integer, ByRef dwCh0CycTime As Integer, ByRef dwCh1CycTime As Integer, ByRef dwChInfoMaxRetry As Integer) As Integer
' The API for transmit CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3SetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wIdx As Integer, ByVal wSlaveAddr As Integer, ByVal dwProtoCalType As Integer, ByVal dwTransBytes As Integer, ByVal dwDeviceCode As Integer) As Integer
' The API for verifying transmit CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3GetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wIdx As Integer, ByRef wChannel As Integer, ByRef wSlaveAddr As Integer, ByRef dwProtoCalType As Integer, ByRef dwTransBytes As Integer, ByRef dwDeviceCode As Integer) As Integer

' The API for checking register as DWord unit within M-III Master board.
Public Declare Function AxlBoardReadDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef dwData As Integer) As Integer
' The API for setting register as DWord unit within M-III Master board
Public Declare Function AxlBoardWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal dwData As Integer) As Integer

' Setting and verifying extension register as DWord unit within board.
Public Declare Function AxlBoardReadDWordEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwOffset As Integer, ByRef dwData As Integer) As Integer
Public Declare Function AxlBoardWriteDWordEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwOffset As Integer, ByVal dwData As Integer) As Integer


' The API for setting servo to stop mode.
Public Declare Function AxmM3ServoSetCtrlStopMode Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bStopMode As Byte) As Integer
' The API for setting servo to Lt selection state.
Public Declare Function AxmM3ServoSetCtrlLtSel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bLtSell As Byte, ByVal bLtSel2 As Byte) As Integer
' The API for verifying servo I/O input state.
Public Declare Function AxmStatusReadServoCmdIOInput Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer
' Servo interpolation drive API.
Public Declare Function AxmM3ServoExInterpolate Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwTPOS As Integer, ByVal dwVFF As Integer, ByVal dwTFF As Integer, ByVal dwTLIM As Integer, ByVal dwExSig1 As Integer, ByVal dwExSig2 As Integer) As Integer
' The API for setting bias of the servo actuator.
Public Declare Function AxmM3ServoSetExpoAccBias Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wBias As Integer) As Integer
' The API for setting time of the servo actuator.
Public Declare Function AxmM3ServoSetExpoAccTime Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wTime As Integer) As Integer
' The API for setting time of the servo move.
Public Declare Function AxmM3ServoSetMoveAvrTime Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wTime As Integer) As Integer
' The API for setting acc filter of the servo.
Public Declare Function AxmM3ServoSetAccFilter Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bAccFil As Byte) As Integer
' The API for setting status monitor1 of the servo.
Public Declare Function AxmM3ServoSetCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bMonSel As Byte) As Integer
' The API for setting status monitor2 of the servo.
Public Declare Function AxmM3ServoSetCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bMonSel As Byte) As Integer
' The API for verifying status monitor1 of the servo.
Public Declare Function AxmM3ServoStatusReadCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer
' The API for verifying status monitor2 of the servo.
Public Declare Function AxmM3ServoStatusReadCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer
' The API for setting Dec of servo actuator.
Public Declare Function AxmM3ServoSetAccDec Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wAccl As Integer, ByVal wAcc2 As Integer, ByVal wAccSW As Integer, ByVal wDec1 As Integer, ByVal wDec2 As Integer, ByVal wDecSW As Integer) As Integer
' The API for servo stop.
Public Declare Function AxmM3ServoSetStop Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lMaxDecel As Integer) As Integer


'========== Common commands of standard I/O dvices =========================================================================
' The API for return parameter setting value of each slave device.
Public Declare Function AxlM3GetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
' The API for setting parameter value of each slave device.
Public Declare Function AxlM3SetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
' The API for return ID value of each slave device.
Public Declare Function AxlM3GetStationIdRd Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bIdCode As Byte, ByVal bOffset As Byte, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
' The API used as invalid command of each slave device.
Public Declare Function AxlM3SetStationNop Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
' The API for set up each slave device.
Public Declare Function AxlM3SetStationConfig Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bConfigMode As Byte, ByVal bModuleType As Byte) As Integer
' The API for return alarm and warning status value of each slave device.
Public Declare Function AxlM3GetStationAlarm Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wAlarmRdMod As Integer, ByVal wAlarmIndex As Integer, ByVal bModuleType As Byte, ByRef pwAlarmData As Integer) As Integer
' The API for clearing alarm and warning status value of each slave device.
Public Declare Function AxlM3SetStationAlarmClear Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wAlarmClrMod As Integer, ByVal bModuleType As Byte) As Integer
' The API for setting establish synchronous communication with each slave device.
Public Declare Function AxlM3SetStationSyncSet Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Integer) As Integer
' The API for setting connection with each slave device.
Public Declare Function AxlM3SetStationConnect Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bVer As Byte, ByVal bComMode As Byte, ByVal bComTime As Byte, ByVal bProfileType As Byte, ByVal bModuleType As Byte) As Integer
' The API for setting disconnection with each slave device.
Public Declare Function AxlM3SetStationDisConnect Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
' The API for return of non-volatile parameter setting value.
Public Declare Function AxlM3GetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
' The API for setting non-volatile parameter value of each slave device.
Public Declare Function AxlM3SetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Integer
' The API for return of memory setting value of each slave device.
Public Declare Function AxlM3GetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wSize As Integer, ByVal dwAddress As Integer, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Integer
' The API for setting memory value of each slave device.
Public Declare Function AxlM3SetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal wSize As Integer, ByVal dwAddress As Integer, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Integer


'========== Connection commands of standard I/O dvices =========================================================================
' The API for setting value of automatic access mode of each re-ordered slave device.
Public Declare Function AxlM3SetStationAccessMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByVal bRWSMode As Byte) As Integer
' The API for return of automatic access mode setting value of each re-ordered slave device.
Public Declare Function AxlM3GetStationAccessMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef bRWSMode As Byte) As Integer
' The API for set synchronous auto connect mode of each slave device.
Public Declare Function AxlM3SetAutoSyncConnectMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByVal dwAutoSyncConnectMode As Integer) As Integer
' The API for return of synchronous auto connect mode setting value of each slave device.
Public Declare Function AxlM3GetAutoSyncConnectMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef dwpAutoSyncConnectMode As Integer) As Integer
' The API for establish a single synchronization connection to each slave device.
Public Declare Function AxlM3SyncConnectSingle Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
' The API for establish a single synchronization disconnection to each slave device.
Public Declare Function AxlM3SyncDisconnectSingle Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte) As Integer
' The API for verifying connection status with slave device.
Public Declare Function AxlM3IsOnLine Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByRef dwData As Integer) As Integer

